fix: change logo size on mobile

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,8 +1,8 @@
 .homeLogo {
   width: 60%;
-  @media (max-width: 430px) {
+  /* @media (max-width: 430px) {
     width: 60px;
-  }
+  } */
 }
 
 .logoWrapper {
